update distance
