# server/src/__tests__/api/swagger.yaml
@@ -25,6 +25,8 @@ tags:
     description: Need JWT TOKENS
   - name: Appointments
     description: Need JWT TOKENS
+  - name: Distance
+    description: No need JWT TOKENS
 paths:
   /api/auth/register:
     post:
@@ -996,3 +998,193 @@ paths:
           description: Doctor, customer, or service not found
         500:
           description: Internal server error
+  /api/distance/autocomplete:
+    get:
+      summary: Address autocomplete
+      description: Provides address suggestions based on user input. This endpoint helps users to quickly find and select addresses by providing a list of possible matches based on their input.
+      tags: [Distance]
+      parameters:
+        - in: query
+          name: query
+          required: true
+          schema:
+            type: string
+          description: The address query string
+      responses:
+        200:
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    place_id:
+                      type: number
+                    licence:
+                      type: string
+                    osm_type:
+                      type: string
+                    osm_id:
+                      type: number
+                    boundingbox:
+                      type: array
+                      items:
+                        type: string
+                    lat:
+                      type: string
+                    lon:
+                      type: string
+                    display_name:
+                      type: string
+                    class:
+                      type: string
+                    type:
+                      type: string
+                    importance:
+                      type: number
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+
+  /api/distance/calculate-route:
+    get:
+      summary: Calculate route
+      description: Calculates the route between a given address and Genkikoi. This endpoint helps users to find the best route from their starting address to Genkikoi, providing details such as distance, duration, and the route itself.
+      tags: [Distance]
+      parameters:
+        - in: query
+          name: address
+          required: true
+          schema:
+            type: string
+          description: The starting address
+      responses:
+        200:
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  origin:
+                    type: object
+                    properties:
+                      lat:
+                        type: number
+                      lon:
+                        type: number
+                  destination:
+                    type: object
+                    properties:
+                      lat:
+                        type: number
+                      lon:
+                        type: number
+                      name:
+                        type: string
+                  distance:
+                    type: number
+                    description: Distance in kilometers
+                  duration:
+                    type: number
+                    description: Duration in minutes
+                  route:
+                    type: array
+                    items:
+                      type: array
+                      items:
+                        type: number
+                    description: Array of coordinate pairs representing the route
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        404:
+          description: Address not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+
+  /api/distance/route-info:
+    post:
+      summary: Get route information
+      description: Calculates distance and estimated duration from a given starting address to "Đại học FPT TP.HCM, Lô E2a-7, Đường D1, Phường Long Thạnh Mỹ, Thành phố Thủ Đức, Thành phố Hồ Chí Minh, 71216, Việt Nam"
+      tags: [Distance]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                address:
+                  type: string
+                  description: The starting address
+                  example: 'Nhà Văn hóa Sinh viên, Quảng trường sáng tạo, Phường Đông Hòa, Dĩ An, Tỉnh Bình Dương, 00848, Việt Nam'
+      responses:
+        200:
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  distance:
+                    type: string
+                    description: Distance in kilometers
+                  duration:
+                    type: string
+                    description: Estimated duration in hours and minutes
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
