# server/src/index.ts
@@ -22,6 +22,7 @@ import {
   appointmentRoutes,
   authRoutes,
   billRoutes,
+  distanceRoutes,
   doctorRoutes,
   serviceRoutes,
   staffRoutes,
@@ -71,6 +72,7 @@ app.use("/api/staffs", staffRoutes);
 app.use("/api/doctors", doctorRoutes);
 app.use("/api/vnpay", vnpayRoutes);
 app.use("/api/bills", billRoutes);
+app.use("/api/distance", distanceRoutes);
 // app.use("/api/doctorSchedules", doctorScheduleRoutes);
 // +++++++ ADD DATA +++++++
 // Cái này t dùng để add tạm dữ liêu!
